// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`From within the empty-project fixture Complexity is measured correctly: complexity metric 1`] = `"1.0.0.2"`;

exports[`From within the empty-project fixture Minimal project matches expectation 1`] = `
RedwoodProject {
  "errors": [],
  "filepath": "",
  "name": "empty-project",
  "type": "typescript",
  "warnings": [],
}
`;

exports[`From within the example-todo-main fixture Complexity is measured correctly: complexity metric 1`] = `"7.1.4.8"`;

exports[`From within the example-todo-main fixture Minimal project matches expectation 1`] = `
RedwoodProject {
  "errors": [],
  "filepath": "",
  "name": "example-todo-main",
  "type": "typescript",
  "warnings": [],
}
`;

exports[`From within the example-todo-main-with-errors fixture Complexity is measured correctly: complexity metric 1`] = `"4.1.2.3"`;

exports[`From within the example-todo-main-with-errors fixture Minimal project matches expectation 1`] = `
RedwoodProject {
  "errors": [],
  "filepath": "",
  "name": "example-todo-main-with-errors",
  "type": "javascript",
  "warnings": [],
}
`;

exports[`From within the test-project fixture Complexity is measured correctly: complexity metric 1`] = `"19.3.10.20"`;

exports[`From within the test-project fixture Minimal project matches expectation 1`] = `
RedwoodProject {
  "errors": [],
  "filepath": "",
  "name": "test-project",
  "type": "typescript",
  "warnings": [],
}
`;
